// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test funtional on \`GifGrid\` Debe de mostrar items cuando se cargan imagenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    Jiraya
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="abc"
      key="abc"
      title="Any message"
      url="https://google.com"
    />
  </div>
</Fragment>
`;

exports[`Test funtional on \`GifGrid\` Deberia renderizar correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    Jiraya
     
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
